src/objects/Apttus_Config2__OrderLoyaltyPointAccrualItem__c.object
<CustomObject>
    <description>Represents loyalty points accrued for a product/service</description>
    <fields>
        <fullName>Apttus_Config2__AccrualDate__c</fullName>
        <description>The points accrual date</description>
        <inlineHelpText>The points accrual date</inlineHelpText>
        <label>Accrual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AccrualSummaryId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated point accrual summary</description>
        <inlineHelpText>ID of the associated point accrual summary</inlineHelpText>
        <label>Accrual Summary</label>
        <referenceTo>Apttus_Config2__LoyaltyPointAccrualSummary__c</referenceTo>
        <relationshipLabel>Order Loyalty Point Accrual Items</relationshipLabel>
        <relationshipName>OrderLoyaltyPointAccrualItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveCode__c</fullName>
        <description>The incentive code available to customers to identify the incentive</description>
        <inlineHelpText>The incentive code available to customers to identify the incentive</inlineHelpText>
        <label>Incentive Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated incentive</description>
        <inlineHelpText>ID of the associated incentive</inlineHelpText>
        <label>Incentive</label>
        <referenceTo>Apttus_Config2__Incentive__c</referenceTo>
        <relationshipLabel>Order Loyalty Point Accrual Items</relationshipLabel>
        <relationshipName>OrderLoyaltyPointAccrualItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LineItemId__c</fullName>
        <description>ID of the associated order line item</description>
        <inlineHelpText>ID of the associated order line item</inlineHelpText>
        <label>Line Item</label>
        <referenceTo>Apttus_Config2__OrderLineItem__c</referenceTo>
        <relationshipLabel>Loyalty Point Accrual Items</relationshipLabel>
        <relationshipName>LoyaltyPointAccrualItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LineNumber__c</fullName>
        <description>The line number</description>
        <label>Line Number</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LineType__c</fullName>
        <description>The line type</description>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Auto</fullName>
                    <default>true</default>
                    <label>Auto</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Points__c</fullName>
        <description>The loyalty points accrued for the line item</description>
        <inlineHelpText>The loyalty points accrued for the line item</inlineHelpText>
        <label>Points</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceRuleEntryId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the point accrual rule entry</description>
        <inlineHelpText>ID of the point accrual rule Entry</inlineHelpText>
        <label>Price Rule Entry</label>
        <referenceTo>Apttus_Config2__PriceRuleEntry__c</referenceTo>
        <relationshipLabel>Order Loyalty Point Accrual Items</relationshipLabel>
        <relationshipName>OrderLoyaltyPointAccrualItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceRuleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the point accrual rule</description>
        <inlineHelpText>ID of the point accrual rule</inlineHelpText>
        <label>Price Rule</label>
        <referenceTo>Apttus_Config2__PriceRule__c</referenceTo>
        <relationshipLabel>Order Loyalty Point Accrual Items</relationshipLabel>
        <relationshipName>OrderLoyaltyPointAccrualItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Type__c</fullName>
        <description>The user defined type</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Loyalty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Order Loyalty Point Accrual Item</label>
    <nameField>
        <displayFormat>PA-{0000000000}</displayFormat>
        <label>Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Loyalty Point Accrual Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>